[tool.poetry]
name = "jfin-gpt"
version = "0.1.0"
description = ""
authors = ["asetseksenali <asetseksenali@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"
huggingface-hub = "0.25.2"
langchain = "^0.3.11"
transformers = "^4.47.0"
werkzeug = "^3.1.3"
flask = {extras = ["async"], version = "^3.1.0"}
langdetect = "^1.0.9"
langchain-community = "^0.3.11"
faiss-cpu = "^1.9.0.post1"
pymilvus = "^2.5.0"
langchain-milvus = "^0.1.7"
instructorembedding = "^1.0.1"
sentence-transformers = "^3.3.1"
pypdf = "^5.1.0"
torch = {version = "^2.5.1+cu124", source = "pytorch_cuda"}
accelerate = "^1.2.0"
flask-babel = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
langchain-qdrant = "^0.2.0"
langchain-ollama = "^0.2.1"
langgraph = "^0.2.59"
langchain-huggingface = "^0.1.2"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
